compiler/testData/diagnostics/testsWithJsStdLib/name/jsNamePrihibitedOnPrimaryConstructor.kt
// FIR_IDENTICAL
package foo

class A <!JS_NAME_ON_PRIMARY_CONSTRUCTOR_PROHIBITED!>@JsName("B")<!> constructor()